# discord-agent

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.app  README.md  docker-compose.yml  package-lock.json  package.json
.codex/skills/container-dev/: SKILLS.md
.github/workflows/: ci-bot.yml  release-bot.yml
app/healthz/: route.ts
app/rss.xml/: route.ts
app/tasks/[task_id]/: route.ts
docs/: architecture.md  notion-discord-setup.md  vercel-setup.md
lib/: config.ts  notion.test.ts  notion.ts  public-tasks.test.ts  public-tasks.ts
prompts/: research.txt
src/: codex.rs  config.rs  db.rs  discord_bot.rs  lib.rs  local_input.rs  logging.rs  main.rs  models.rs  notion.rs  rss_server.rs  task_processor.rs
