[package]
name = "discord-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
tokio = { version = "1.20", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
